--- a/css/main.css
+++ b/css/main.css
@@ -309,8 +309,8 @@ header {
 }
 
 .hero-section {
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url(../images/hero-img.jpg);
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url(../images/hero-img.jpg);
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url(../images/hero-img-480-1x.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url(../images/hero-img-480-1x.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -318,6 +318,28 @@ header {
   padding-bottom: 118px;
   margin-left: auto;
   margin-right: auto;
+}
+
+@media screen and (min-width: 480px) {
+  .hero-section {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero-section {
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url(../images/hero-img-768-1x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url(../images/hero-img-768-1x.jpg);
+    width: 768px;
+    background-size: contain;
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+  .hero-section {
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url(../images/hero-img-480-2x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url(../images/hero-img-480-2x.jpg);
+  }
 }
 
 .hero-text {
@@ -342,7 +364,7 @@ header {
   padding: 10px 0;
   border-radius: 4px;
   border: 2px;
-  margin-top: 46px;
+  margin-top: 30px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 0;
@@ -800,6 +822,7 @@ header {
 
 .team-item img {
   display: block;
+  max-width: 100%;
 }
 
 .team-item ul {
