--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -4,16 +4,41 @@
       rgba(47, 48, 58, 0.8),
       rgba(47, 48, 58, 0.8)
     ),
-    url(../images/hero-img.jpg);
+    url(../images/hero-img-480-1x.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   padding-top: 118px;
   padding-bottom: 118px;
-  // padding: 118px 60px;
   margin-left: auto;
   margin-right: auto;
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+  @media screen and (min-width: 768px) {
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.8),
+        rgba(47, 48, 58, 0.8)
+      ),
+      url(../images/hero-img-768-1x.jpg);
+    width: 768px;
+    background-size: contain;
+  }
 }
+@media screen and (min-device-pixel-ratio: 2),
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
+  .hero-section {
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.8),
+        rgba(47, 48, 58, 0.8)
+      ),
+      url(../images/hero-img-480-2x.jpg);
+  }
+}
+
 // .conteiner-hero {
 //   padding: 200px 0;
 // }
@@ -36,7 +61,7 @@
   padding: 10px 0;
   border-radius: 4px;
   border: 2px;
-  margin-top: 46px;
+  margin-top: 30px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 0;
